[gd_scene load_steps=3 format=3 uid="uid://b8xjq2n5dtl7r"]

[ext_resource type="Script" path="res://scripts/test_scenes/studio_apartment_scene.gd" id="1_studio"]
[ext_resource type="Script" path="res://scripts/camera/studio_camera.gd" id="1_camera"]

[node name="StudioApartmentScene" type="Node3D"]
script = ExtResource("1_studio")

[node name="StudioContainer" type="Node3D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StudioFurnishingPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 0.0
anchor_bottom = 0.0
offset_right = 400.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/StudioFurnishingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="UI/StudioFurnishingPanel/VBoxContainer"]
layout_mode = 2
text = "Studio Apartment - Dynamic Furnishing"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/StudioFurnishingPanel/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="UI/StudioFurnishingPanel/VBoxContainer"]
layout_mode = 2
text = "Camera Controls:
WASD - Move Camera
QE - Up/Down  
Left Click + Drag - Look Around
Mouse Wheel - Zoom

Style Controls:
F1 - Modern Style
F2 - Traditional Style  
F3 - Minimalist Style"

[node name="CurrentStyleLabel" type="Label" parent="UI/StudioFurnishingPanel/VBoxContainer"]
layout_mode = 2
text = "Current Style: Modern"

[node name="FurnitureCountLabel" type="Label" parent="UI/StudioFurnishingPanel/VBoxContainer"]
layout_mode = 2
text = "Furniture Items: 0"

[node name="HSeparator2" type="HSeparator" parent="UI/StudioFurnishingPanel/VBoxContainer"]
layout_mode = 2

[node name="ResetCameraButton" type="Button" parent="UI/StudioFurnishingPanel/VBoxContainer"]
layout_mode = 2
text = "Reset Camera View"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 8, 12, 8)
script = ExtResource("1_camera")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 8, 0)